<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_charcoal"
    tools:context=".ui.feature.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_32"
        android:paddingEnd="@dimen/dp_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edt_email"
            style="@style/PrimaryEditText"
            android:layout_width="0dp"
            android:autofillHints="email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_password"
            style="@style/PrimaryEditText"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/dp_16"
            android:autofillHints="password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/login"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/dp_16"
            android:enabled="false"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:visibility="gone"
            android:indeterminateTint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/button_login"
            app:layout_constraintEnd_toEndOf="@id/button_login"
            app:layout_constraintStart_toStartOf="@id/button_login"
            app:layout_constraintTop_toTopOf="@id/button_login"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_32"
            android:alpha="0.8"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:text="@string/forgot_password"
            android:textColor="@color/text_primary_color_selector"
            android:textSize="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            tools:ignore="SpUsage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nimble"
        android:textColor="?textPrimaryColor"
        android:textSize="@dimen/dp_32"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/form_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>